--- a/src/modules/UserAccess/Tests/UnitTests/Conteque.Shoppingendly.Modules.UserAccess.UnitTests.csproj
+++ b/src/modules/UserAccess/Tests/UnitTests/Conteque.Shoppingendly.Modules.UserAccess.UnitTests.csproj
@@ -2,12 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-
         <IsPackable>false</IsPackable>
+        <RootNamespace>Conteque.Shoppingendly.Modules.UserAccess.UnitTests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="5.10.3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+        <PackageReference Include="Moq" Version="4.14.7" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,6 +19,12 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\Conteque.Shoppingendly.Modules.UserAccess.Application.csproj" />
+      <ProjectReference Include="..\..\Domain\Conteque.Shoppingendly.Modules.UserAccess.Domain.csproj" />
+      <ProjectReference Include="..\..\Infrastructure\Conteque.Shoppingendly.Modules.UserAccess.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
