Bugfix: fixed problem with references to libraries outside a repository.
Changes:
- removed references to project outside the repository, because solution can not be built with this dependency. Use the nuget packages instead of it.
- updated github workflow: adding github package source before build and tests action has been implemented.

--- a/.github/workflows/aspnetcore.yaml
+++ b/.github/workflows/aspnetcore.yaml
@@ -1,25 +1,43 @@
 name: aspnetcore
 
-on: [push]
+on: [ push ]
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.101
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
+      - uses: actions/checkout@v2
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1.200
+      - name: Add Github package source
+        env:
+          CONFIGURATION: release
+          SOURCE: https://nuget.pkg.github.com/pkantorowicz/index.json
+          SOURCE_NAME: github
+          USERNAME: ${{ github.actor }}
+          TOKEN: ${{ secrets.TOKEN }}
+        run: |
+          dotnet nuget add source $env:SOURCE -n $env:SOURCE_NAME -u $env:USERNAME -p $env:TOKEN
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
   tests:
     runs-on: windows-latest
     steps:
       - name: Setup .NET Core if needed
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.101
+          dotnet-version: 3.1.200
+      - name: Add Github package source
+        env:
+          CONFIGURATION: release
+          SOURCE: https://nuget.pkg.github.com/pkantorowicz/index.json
+          SOURCE_NAME: github
+          USERNAME: ${{ github.actor }}
+          TOKEN: ${{ secrets.TOKEN }}
+        run: |
+          dotnet nuget add source $env:SOURCE -n $env:SOURCE_NAME -u $env:USERNAME -p $env:TOKEN
       - uses: actions/checkout@v2
       - name: tests
-        run: dotnet test --configuration Release
+        run: dotnet test 
